<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/footer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/view_rsrp"
        android:layout_width="20dp"
        android:layout_height="5dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:background="@color/red"
        app:layout_constraintBottom_toBottomOf="@+id/txt_rsrp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/txt_rsrp" />

    <View
        android:id="@+id/view_rsrq"
        android:layout_width="20dp"
        android:layout_height="5dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:background="@color/green"
        app:layout_constraintBottom_toBottomOf="@+id/txt_rsrq"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txt_rsrq" />

    <View
        android:id="@+id/view_sinr"
        android:layout_width="20dp"
        android:layout_height="5dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:background="@color/blue"
        app:layout_constraintBottom_toBottomOf="@id/txt_sinr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/txt_sinr" />

    <TextView
        android:id="@+id/txt_rsrp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/label_rsrp"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/txt_rsrq"
        app:layout_constraintStart_toEndOf="@+id/view_rsrp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_rsrq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/label_rsrq"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/txt_sinr"
        app:layout_constraintStart_toEndOf="@+id/view_rsrq"
        app:layout_constraintTop_toBottomOf="@+id/txt_rsrp" />


    <TextView
        android:id="@+id/txt_sinr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/label_sinr"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view_sinr"
        app:layout_constraintTop_toBottomOf="@+id/txt_rsrq" />

    <TextView
        android:id="@+id/txt_table_sinr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_SINR"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="@id/linearLayout3"
        app:layout_constraintStart_toStartOf="@id/linearLayout3" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout3"
        android:layout_width="80dp"
        android:layout_height="25dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.akexorcist.roundcornerprogressbar.TextRoundCornerProgressBar
            android:id="@+id/progress_sinr"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:rcBackgroundColor="#0A000000"
            app:rcMax="100"
            app:rcRadius="0dp"
            app:rcTextProgressColor="#111111" />

        <TextView
            android:id="@+id/txt_sinr_value"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/label_SINR"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/txt_table_rsrq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_RSRQ"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="@id/linearLayout2"
        app:layout_constraintStart_toStartOf="@id/linearLayout2" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout2"
        android:layout_width="80dp"
        android:layout_height="25dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout3"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout3">

        <com.akexorcist.roundcornerprogressbar.TextRoundCornerProgressBar
            android:id="@+id/progress_rsrq"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:rcBackgroundColor="#0A000000"
            app:rcMax="100"
            app:rcRadius="0dp"
            app:rcTextProgressColor="#111111" />

        <TextView
            android:id="@+id/txt_rsrq_value"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/label_RSRQ"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/txt_table_rsrp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_RSRQ"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="@id/linearLayout"
        app:layout_constraintStart_toStartOf="@id/linearLayout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="80dp"
        android:layout_height="25dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout2">

        <com.akexorcist.roundcornerprogressbar.TextRoundCornerProgressBar
            android:id="@+id/progress_rsrp"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:rcBackgroundColor="#0A000000"
            app:rcMax="100"
            app:rcRadius="0dp"
            app:rcTextProgressColor="#111111" />

        <TextView
            android:id="@+id/txt_rsrp_value"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/label_RSRQ"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
